--- a/app/views/data.html
+++ b/app/views/data.html
@@ -13,7 +13,7 @@
         <table class="govuk-table">
             <thead class="govuk-table__head">
                 <tr class="govuk-table__row">
-                    <th class="govuk-table__header govuk-!-width-one-half" scope="col">Name</th>
+                    <th class="govuk-table__header" scope="col">Name</th>
                     <th class="govuk-table__header" scope="col">Data held in session</th>
                 </tr>
             </thead>
