--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -91,13 +91,17 @@
                     </ul>
 
                     <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Risks</h3>
-                    <ul class="govuk-list govuk-list--bullet">
-                        <li><a class="govuk-link govuk-link--no-visited-state" href="/report/" >What are the main risks across your projects?</a></li>
-                        <li><a class="govuk-link govuk-link--no-visited-state" href="/report/" >What is the name of the risk?</a></li>
-                        <li><a class="govuk-link govuk-link--no-visited-state" href="/report/" >What is the risk category?</a></li>
-                        <li><a class="govuk-link govuk-link--no-visited-state" href="/report/" >What might go wrong and what would the outcome be?</a></li>
-                        <li><a class="govuk-link govuk-link--no-visited-state" href="/report/" >What is the pre-mitigated likelihood score?</a></li>
-                    </ul>
+                    
+                        <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/risks/" >What are the main risks across your projects?</a>
+                            <ul class="govuk-list govuk-list--bullet">                        
+                                <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/risks/add/" >What is the name of the risk?</a></li>
+                                <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/risks/add/category" >What is the risk category?</a></li>
+                                <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/risks/add/issues" >What might go wrong and what would the outcome be?</a></li>
+                                <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/risks/add/likelihood" >What is the pre-mitigated likelihood score?</a></li>
+                                <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/risks/add/more" >Do you want to add any more risks?</a></li>
+                            </ul>
+                        </li>
+                                            
                 </li>                
             <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
                 <li>
