small changes when we reviewed together

--- a/app/views/emails/report-declined.html
+++ b/app/views/emails/report-declined.html
@@ -18,9 +18,15 @@
   <div class="govuk-grid-column-two-thirds">
 
     <h1 class="govuk-heading-l">{{ title }}</h1>        
-    <p>Your report for ((fund_name)) has been declined by Kate Harries (Section 151 officer) and Brian Coult (Cheif Finance officer). </p>
+    <p>Your report for ((fund_name)) has been declined by:</p>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>Kate Harries - Section 151 Officer</li>
+      <li>Brian Coult - Chief Finance Officer</li></ul>
+    
 
-    <p>Reporting period<br><strong>July 2023 to September 2023</strong></p>
+    <div class="govuk-inset-text">
+      <p>Reporting period: <strong>July 2023 to September 2023</strong></p>
+      </div>
 
     <p>Reason for decline: PLAYBACK THEIR REASON HERE</p>
 
@@ -28,7 +34,7 @@
     
     <h2 class="govuk-heading-m">Get help</h2>	
 
-    <p>If you have any questions or need help, email us at fsd@levellingup.gov.uk.</p>
+    <p>If you have any questions or need help, email us at <a href="mailto:fsd@levellingup.gov.uk">fsd@levellingup.gov.uk</a>.</p>
 
 
 
