--- a/app/views/emails/report-signed-off-confirmation-reporter.html
+++ b/app/views/emails/report-signed-off-confirmation-reporter.html
@@ -19,15 +19,24 @@
 
     <h1 class="govuk-heading-l">{{ title }}</h1>        
     
-    <p>Your report has been signed off by Kate Harries (Section 151 officer) and Brian Coult (Cheif Finance officer). It has now been submitted to Pathfinders.</p>
+    <p>Your report has been signed off by:</p>
+      
+      <ul class="govuk-list govuk-list--bullet">
+        <li>Kate Harries - Section 151 Officer</li>
+        <li>Brian Coult - Chief Finance Officer</li></ul>
+      
+      <p>It has now been submitted to Pathfinders.</p>
 
-    <p>Reporting period<br><strong>July 2023 to September 2023</strong></p>
+      <div class="govuk-inset-text">
+        <p>Reporting period: <strong>July 2023 to September 2023</strong></p>
+        </div>
+  
   
     <p><a href="#">Sign in to view or download the submitted report</a></p>
     
     <h2 class="govuk-heading-m">Get help</h2>	
 
-    <p>If you have any questions or need help, email us at fsd@levellingup.gov.uk.</p>
+    <p>If you have any questions or need help, email us at <a href="mailto:fsd@levellingup.gov.uk">fsd@levellingup.gov.uk</a>.</p>
 
 
 
