--- a/app/views/project/report/confirmation.html
+++ b/app/views/project/report/confirmation.html
@@ -13,6 +13,7 @@
 
         {{ govukPanel({
 			titleText: "Report submitted",
+			classes: "govuk-!-margin-bottom-5",
 			html: "Reporting period<br><strong>July 2023 to September 2023</strong>"
 		}) }}
 	
