--- a/app/views/emails/report-declined-confirmation.html
+++ b/app/views/emails/report-declined-confirmation.html
@@ -21,7 +21,9 @@
     
     <p>You have declined a report from ((organisation_name)) to ((fund_name)).</p>
 
-    <p>Reporting period<br><strong>July 2023 to September 2023</strong></p>
+    <div class="govuk-inset-text">
+      <p>Reporting period: <strong>July 2023 to September 2023</strong></p>
+      </div>
 
     <p>Reason for decline: PLAYBACK THEIR REASON HERE</p>
   
@@ -29,7 +31,7 @@
     
     <h2 class="govuk-heading-m">Get help</h2>	
 
-    <p>If you have any questions or need help, email us at fsd@levellingup.gov.uk.</p>
+    <p>If you have any questions or need help, email us at <a href="mailto:fsd@levellingup.gov.uk">fsd@levellingup.gov.uk</a>.</p>
 
 
 
