--- a/app/views/emails/report-signed-off-confirmation.html
+++ b/app/views/emails/report-signed-off-confirmation.html
@@ -21,13 +21,16 @@
     
     <p>You successfully signed off and submitted a report from ((organisation_name)) to ((fund_name)).</p>
 
-    <p>Reporting period<br><strong>July 2023 to September 2023</strong></p>
+    <div class="govuk-inset-text">
+      <p>Reporting period: <strong>July 2023 to September 2023</strong></p>
+      </div>
+
   
     <p><a href="#">Sign in to view or download the submitted report</a></p>
     
     <h2 class="govuk-heading-m">Get help</h2>	
 
-    <p>If you have any questions or need help, email us at fsd@levellingup.gov.uk.</p>
+    <p>If you have any questions or need help, email us at <a href="mailto:fsd@levellingup.gov.uk">fsd@levellingup.gov.uk</a>.</p>
 
 
 
