--- a/app/views/emails/report-submitted.html
+++ b/app/views/emails/report-submitted.html
@@ -21,7 +21,9 @@
     
     <p>Your report for ((fund_name)) has been sent to ((user_name_and_role)) and ((user_name_and_role)) for review. </p>
 
-    <p>Reporting period<br><strong>July 2023 to September 2023</strong></p>
+    <div class="govuk-inset-text">
+    <p>Reporting period: <strong>July 2023 to September 2023</strong></p>
+    </div>
 
     <h2 class="govuk-heading-m">What happens next</h2>	
 
@@ -31,7 +33,7 @@
 
     <h2 class="govuk-heading-m">Get help</h2>	
 
-    <p>If you have any questions or need help, email us at fsd@levellingup.gov.uk.</p>
+    <p>If you have any questions or need help, email us at <a href="mailto:fsd@levellingup.gov.uk">fsd@levellingup.gov.uk</a>.</p>
     
     
     
