--- a/app/views/emails/section151.html
+++ b/app/views/emails/section151.html
@@ -21,26 +21,28 @@
     
     <p>((user_name)) from ((organisation_name)) has sent you a report to be reviewed.</p>
 
-    <p>Reporting period<br><strong>July 2023 to September 2023</strong></p>
+    <div class="govuk-inset-text">
+      <p>Reporting period: <strong>July 2023 to September 2023</strong></p>
+      </div>
 
-    <p><a href="#">Sign in to review the report</a></p>
+    
 
     <h2 class="govuk-heading-m">What happens next</h2>	
 
     <p>Once signed in, you can review the report. If there are no problems, you can sign off the report and submit it to ((fund_name)).</p>
 
-    <p>If there are any issues with the report, you can decline it so ((user_name)) can correct it and resend. When you decline a report, you'll be able to explain why and the reporter will be able to make amendments before resending for review.</p>
+    <p>If there are any issues with the report, you can decline it so ((user_name)) can correct it and resend. When you decline a report, you’ll be able to explain why and the reporter will be able to make amendments before resending for review.</p>
 
     <p>You need to review the report by July 14 2024.</p>
 
+    <p><a href="/sign-in?userType=Section151">Sign in to review the report</a></p>
+
     <h2 class="govuk-heading-m">Get help</h2>	
 
-    <p>If you have any questions or need help, email us at fsd@levellingup.gov.uk.</p>
+    <p>If you have any questions or need help, email us at <a href="mailto:fsd@levellingup.gov.uk">fsd@levellingup.gov.uk</a>.</p>
    
 
-
-  
-    <p class="govuk-body-s govuk-!-margin-top-9"><a href="/sign-in?userType=Section151">Link back to service</a></p>
+    
 
 
 
