--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -172,27 +172,27 @@
         {% set signoffHtml %}                    
             <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Reporter flow</h2>        
             <ul class="govuk-list govuk-list--bullet">
-                <li><a class="govuk-link govuk-link--no-visited-state" href="/project/report/check-your-answers" >Check your answers</a></li>
-                <li>Submit your report (removed)</li>
-                <li><a class="govuk-link govuk-link--no-visited-state" href="/project/report/confirmation" >Report submitted</a></li>
+                <li><strong class="govuk-tag govuk-tag--green">In progress</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/project/report/check-your-answers" >Check your answers</a></li>
+                <li><strong class="govuk-tag govuk-tag--green">In progress</strong>  Submit your report (removed)</li>
+                <li><strong class="govuk-tag govuk-tag--green">In progress</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/project/report/confirmation" >Report submitted</a></li>
                 <ul class="govuk-list govuk-list--bullet">
-                    <li><a class="govuk-link govuk-link--no-visited-state" href="/emails/report-submitted" >Email: Your report for ((fund_name)) has been sent for review (Reporter)</a></li>
-                    <li><a class="govuk-link govuk-link--no-visited-state" href="/emails/section151" >Email: Review needed: funding progress report for ((organisation_name)) (Section 151)</a></li>
+                    <li><strong class="govuk-tag govuk-tag--green">In progress</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/emails/report-submitted" >Email: Your report for ((fund_name)) has been sent for review (Reporter)</a></li>
+                    <li><strong class="govuk-tag govuk-tag--green">In progress</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/emails/section151" >Email: Review needed: funding progress report for ((organisation_name)) (Section 151)</a></li>
                 </ul>
             </ul>
             
             <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Section 151 Officer flow</h2>
             <ul class="govuk-list govuk-list--bullet">            
-                <li><a class="govuk-link govuk-link--no-visited-state" href="/sign-in?userType=Section151" >Sign in</a></li>
-                <li><a class="govuk-link govuk-link--no-visited-state" href="/project/sign-off/" >Sign off and submit report</a></li>
-                <li><a class="govuk-link govuk-link--no-visited-state" href="/project/sign-off/reason-for-decline" >Why have you declined this report?</a></li>
-                <li><a class="govuk-link govuk-link--no-visited-state" href="/project/sign-off/confirmation?reportStatus=Declined" >Report declined</a></li>
-                <li><a class="govuk-link govuk-link--no-visited-state" href="/project/sign-off/confirmation?reportStatus=" >Report signed off</a></li>
+                <li><strong class="govuk-tag govuk-tag--green">In progress</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/sign-in?userType=Section151" >Sign in</a></li>
+                <li><strong class="govuk-tag govuk-tag--green">In progress</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/project/sign-off/" >Sign off and submit report</a></li>
+                <li><strong class="govuk-tag govuk-tag--green">In progress</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/project/sign-off/reason-for-decline" >Why have you declined this report?</a></li>
+                <li><strong class="govuk-tag govuk-tag--green">In progress</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/project/sign-off/confirmation?reportStatus=Declined" >Report declined</a></li>
+                <li><strong class="govuk-tag govuk-tag--green">In progress</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/project/sign-off/confirmation?reportStatus=" >Report signed off</a></li>
                 <ul class="govuk-list govuk-list--bullet">
-                    <li><a class="govuk-link govuk-link--no-visited-state" href="/emails/report-signed-off-confirmation" >Email: You signed off a report for ((organisation_name)) (Section 151)</a></li>
-                    <li><a class="govuk-link govuk-link--no-visited-state" href="/emails/report-declined-confirmation" >Email: You declined a report from ((organisation_name)) (Section 151)</a></li>
-                    <li><a class="govuk-link govuk-link--no-visited-state" href="/emails/report-signed-off-confirmation-reporter" >Email: Your report has been signed off (Reporter)</a></li>                    
-                    <li><a class="govuk-link govuk-link--no-visited-state" href="/emails/report-declined" >Email: Your report for ((fund_name)) has been declined (Reporter)</a></li>                    
+                    <li><strong class="govuk-tag govuk-tag--green">In progress</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/emails/report-signed-off-confirmation" >Email: You signed off a report for ((organisation_name)) (Section 151)</a></li>
+                    <li><strong class="govuk-tag govuk-tag--green">In progress</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/emails/report-declined-confirmation" >Email: You declined a report from ((organisation_name)) (Section 151)</a></li>
+                    <li><strong class="govuk-tag govuk-tag--green">In progress</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/emails/report-signed-off-confirmation-reporter" >Email: Your report has been signed off (Reporter)</a></li>                    
+                    <li><strong class="govuk-tag govuk-tag--green">In progress</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/emails/report-declined" >Email: Your report for ((fund_name)) has been declined (Reporter)</a></li>                    
                 </ul>
             </ul>              
         {% endset -%} 
