--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -51,10 +51,10 @@
                 <li>
                     <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Reference data</h3>
                     <ul class="govuk-list govuk-list--bullet">
-                        <li><a class="govuk-link govuk-link--no-visited-state" href="/report/" >Who will be signing off the report?</a></li>
+                        <li><strong class="govuk-tag govuk-tag--green">In progress</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/project/report/who-signs-off-report" >Who will be signing off the report?</a></li>
                         <ul class="govuk-list govuk-list--bullet">
-                            <li><a class="govuk-link govuk-link--no-visited-state" href="/report/" >What’s {NAME}’s email address?</a></li>
-                            <li><a class="govuk-link govuk-link--no-visited-state" href="/report/" >What’s {NAME}’s role?</a></li>
+                            <li><a class="govuk-link govuk-link--no-visited-state" href="/project/report/responsible/sign-off-email" >What’s {NAME}’s email address?</a></li>
+                            <li><a class="govuk-link govuk-link--no-visited-state" href="/project/report/responsible/sign-off-role" >What’s {NAME}’s role?</a></li>
                         </ul>
                         <li><a class="govuk-link govuk-link--no-visited-state" href="/report/" >Who else will be contributing to the report? </a></li>
                         <ul class="govuk-list govuk-list--bullet">
