reference data added flows and cya page

--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -51,15 +51,23 @@
                 <li>
                     <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Reference data</h3>
                     <ul class="govuk-list govuk-list--bullet">
-                        <li><strong class="govuk-tag govuk-tag--green">In progress</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/project/report/who-signs-off-report" >Who will be signing off the report?</a></li>
-                        <ul class="govuk-list govuk-list--bullet">
-                            <li><a class="govuk-link govuk-link--no-visited-state" href="/project/report/responsible/sign-off-email" >What’s {NAME}’s email address?</a></li>
+                        <li><strong class="govuk-tag govuk-tag--green">In progress</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/project/sign-off/responsible/who-signs-off-report" >Who will be signing off the report?</a></li>
+                        <li><strong class="govuk-tag govuk-tag--green">In progress</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/project/sign-off/responsible/role" >What’s their role?</a></li>
+                        <li><strong class="govuk-tag govuk-tag--green">In progress</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/project/sign-off/responsible/contributing-to-report" >Will anyone else be contributing to the report?</a>
+                            <ul class="govuk-list govuk-list--bullet">
+                                <li><strong class="govuk-tag govuk-tag--green">In progress</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/project/sign-off/responsible/contributer" >Who will be contributing to the report?</a></li>
+                            </ul>
+                        </li>
+                        <li><strong class="govuk-tag govuk-tag--green">In progress</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/project/sign-off/responsible/check-your-answers" >Check your answers</a>
+                        
+                        
+                        <!-- <ul class="govuk-list govuk-list--bullet">                            
                             <li><a class="govuk-link govuk-link--no-visited-state" href="/project/report/responsible/sign-off-role" >What’s {NAME}’s role?</a></li>
                         </ul>
                         <li><a class="govuk-link govuk-link--no-visited-state" href="/report/" >Who else will be contributing to the report? </a></li>
                         <ul class="govuk-list govuk-list--bullet">
                             <li><a class="govuk-link govuk-link--no-visited-state" href="/report/" >What’s {NAME}’s email address?</a></li>                
-                        </ul>                
+                        </ul>                 -->
                     </ul>  
 
                     <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Programme progress</h3>
