first draft of RAG ratings

--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -88,11 +88,11 @@
                     </ul>
 
                     <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Project RAG ratings</h3>
-                    <ul class="govuk-list govuk-list--bullet">
-                        <li><a class="govuk-link govuk-link--no-visited-state" href="/report/" >Ratings defined</a></li>
-                        <li><a class="govuk-link govuk-link--no-visited-state" href="/report/" >What is the spend RAG rating for this project?</a></li>
-                        <li><a class="govuk-link govuk-link--no-visited-state" href="/report/" >What is the delivery RAG rating for this project?</a></li>
-                        <li><a class="govuk-link govuk-link--no-visited-state" href="/report/" >Why have you given these ratings? ( could be on reveal on previous pages)</a></li>
+                    <ul class="govuk-list govuk-list--bullet">                        
+                        <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/rag/" >Project RAG ratings</a></li>
+                        <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/rag/spend" >What is the spend RAG rating for this project?</a></li>
+                        <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/rag/delivery" >What is the delivery RAG rating for this project?</a></li>
+                        <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/rag/information" >Is there anything you need to tell us about your ratings?</a></li>
                     </ul>
 
                     <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Risks</h3>
