Small updates to date and word removed from S151 flow and emails

--- a/app/views/project/sign-off/index.html
+++ b/app/views/project/sign-off/index.html
@@ -15,7 +15,7 @@
 
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
 
-      	<p class="govuk-body">((user_name)) has completed a report ready for your review and sign off.</p>
+      	<p class="govuk-body">((user_name)) has completed a report ready for your review.</p>
 
 		<!-- Commented this out until we know what we are puttin gin. -->
 		  <!-- <div class="govuk-inset-text">
