--- a/app/views/project/report/confirmation.html
+++ b/app/views/project/report/confirmation.html
@@ -12,7 +12,7 @@
 	<div class="govuk-grid-column-two-thirds">
 
         {{ govukPanel({
-			titleText: "Report submitted",
+			titleText: "Report sent",
 			classes: "govuk-!-margin-bottom-5",
 			html: "Reporting period<br><strong>July 2023 to September 2023</strong>"
 		}) }}
