--- a/app/views/project/report/confirmation.html
+++ b/app/views/project/report/confirmation.html
@@ -25,7 +25,7 @@
 		<p><a href="/project/" class="govuk-link govuk-link--no-visited-state">Return to overview</a></p>
 
 		<!-- <p class="govuk-body"><a href="#" class="govuk-link">What did you think of this service?</a> (takes 30 seconds)</p> -->
-		<p class="govuk-body-s govuk-!-margin-top-9"><a href="/emails/report-submitted">Report submitted email</a></p>
+		<p class="govuk-body-s govuk-!-margin-top-9"><a href="/emails/report-submitted">Report sent email</a></p>
   	</div>  
 </div>
 
