change to send from submit on confirmation

--- a/app/views/emails/report-submitted.html
+++ b/app/views/emails/report-submitted.html
@@ -27,7 +27,7 @@
 
     <h2 class="govuk-heading-m">What happens next</h2>	
 
-    <p>Your report will either be signed off and submitted to ((fund_name)) or declined. You'll be sent an email by 14 July 2024 to let you know the outcome.</p>
+    <p>Your report will either be signed off and submitted to ((fund_name)) or declined. You’ll be sent an email by 14 July 2024 to let you know the outcome.</p>
 
     <p>If your report is declined, the email will explain why and you will be able to correct any issues and resend the report for another review.</p>
 
