--- a/app/views/index.html
+++ b/app/views/index.html
@@ -45,8 +45,8 @@
             <section class="dluhc-ticket-panel__content" aria-label="Section 1">
         
                 <ul class="govuk-list govuk-body-s">
-                    <li>Last updated: <span class="govuk-!-font-weight-bold">27 June 2024</span></li>
-                    <li>Prototype version: {{releaseVersion}}</li>
+                    <!-- <li>Last updated: <span class="govuk-!-font-weight-bold">28 June 2024</span></li> -->
+                    <li>GOV.UK Prototype Kit: {{releaseVersion}}</li>
                 </ul>        
                         
                 <hr class="govuk-section-break--m">
@@ -57,7 +57,7 @@
                     <li class="govuk-!-font-size-16"><a class="govuk-link govuk-link--no-visited-state" href="https://github.com/communitiesuk/rfp-prototype" target="_blank">Github repository</a></li>
                     <li class="govuk-!-font-size-16"><a class="govuk-link govuk-link--no-visited-state" href="https://www.figma.com/design/2dH3cosIBd2Fr7LUFvJBZN/%2F%2F-Submit-%2F%2F-Submit-Monitoring-Data?node-id=1871-148479" target="_blank">Figma flat files</a></li>
                     <li class="govuk-!-font-size-16"><a class="govuk-link govuk-link--no-visited-state" href="https://www.figma.com/design/c7hbpCzabqtCvENDA27hQo/Report-Funding-Progress?node-id=2402-728&t=zMG3VaZSUGKvfUUs-0" target="_blank">Figma workflows</a></li>
-                    <li class="govuk-!-font-size-16"><a class="govuk-link govuk-link--no-visited-state" href="/listings">Page listings</a></li>        
+                    <!-- <li class="govuk-!-font-size-16"><a class="govuk-link govuk-link--no-visited-state" href="/listings">Page listings</a></li>         -->
                 </ul>
             </section>
         </article>
@@ -85,7 +85,7 @@
         
         {% set serviceHtml %}                    
             
-            <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Main pages</h2>
+            <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Main pages</h2>
             <ul class="govuk-list govuk-list--bullet">
                 <li><a class="govuk-link govuk-link--no-visited-state" href="/service-start" >Start page</a></li>                
                 <li><a class="govuk-link govuk-link--no-visited-state" href="/sign-in" >Sign in</a></li>                
@@ -97,7 +97,7 @@
                 </ul>                
             </ul>                  
 
-            <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Footer pages</h2>
+            <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Footer pages</h2>
             <ul class="govuk-list govuk-list--bullet">                
                 <li><a class="govuk-link govuk-link--no-visited-state" href="/help" >Help</a></li>
                 <li><a class="govuk-link govuk-link--no-visited-state" href="/privacy-notice" >Privacy Notice</a></li>
@@ -111,7 +111,7 @@
         
         {% set reportHtml %}            
 
-            <h2 class="govuk-heading-m">Pathfinder</h2>
+            <h2 class="govuk-heading-s">Pathfinder</h2>
             <ul class="govuk-list govuk-list--bullet">
                 <li>
                     <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Reference data</h3>
@@ -175,7 +175,7 @@
                 </li>                
             <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
                 <li>
-                    <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Other funds (TBC)</h2>            
+                    <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Other funds (TBC)</h2>            
                     <ul class="govuk-list govuk-list--bullet">
                         <li><a class="govuk-link govuk-link--no-visited-state" href="/project/" >Report start ( Task List )</a></li>                    
                         <ul class="govuk-list govuk-list--bullet">                        
@@ -244,7 +244,7 @@
         {% endset -%}  
 
         {% set signoffHtml %}                    
-            <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Reporter flow</h2>        
+            <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Reporter flow</h2>        
             <ul class="govuk-list govuk-list--bullet">
                 <li><strong class="govuk-tag govuk-tag--blue">New</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/project/report/check-your-answers" >Check your answers</a></li>
                 <li><strong class="govuk-tag govuk-tag--blue">New</strong>  Submit your report (removed)</li>
@@ -255,7 +255,7 @@
                 </ul>
             </ul>
             
-            <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Section 151 Officer flow</h2>
+            <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Section 151 Officer flow</h2>
             <ul class="govuk-list govuk-list--bullet">            
                 <li><strong class="govuk-tag govuk-tag--blue">New</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/sign-in?userType=Section151" >Sign in</a></li>
                 <li><strong class="govuk-tag govuk-tag--blue">New</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/project/sign-off/" >Sign off and submit report</a></li>
@@ -273,7 +273,7 @@
 
         {% set adminHtml %}            
         
-            <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Admin pages</h2>
+            <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Admin pages</h2>
             <ul class="govuk-list govuk-list--bullet">                
                 <li><a class="govuk-link govuk-link--no-visited-state" href="/admin/completion-date" >What’s the financial completion date?</a></li>                
                 <li><a class="govuk-link govuk-link--no-visited-state" href="/admin/practical-completion-date" >What’s your practical completion date?</a></li>                
@@ -296,7 +296,7 @@
 
 
         {% set findHtml %}            
-            <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Find monitoring data</h2>            
+            <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Find monitoring data</h2>            
             <ul class="govuk-list govuk-list--bullet">                
                 <li><a class="govuk-link govuk-link--no-visited-state" href="/find/download-data" >Get monitoring and evaluation data</a></li>
                 <li><a class="govuk-link govuk-link--no-visited-state" href="/find/confirmation" >Request received</a></li>
