--- a/app/views/index.html
+++ b/app/views/index.html
@@ -300,7 +300,9 @@
             <ul class="govuk-list govuk-list--bullet">                
                 <li><a class="govuk-link govuk-link--no-visited-state" href="/find/download-data" >Get monitoring and evaluation data</a></li>
                 <li><a class="govuk-link govuk-link--no-visited-state" href="/find/confirmation" >Request received</a></li>
-                <li><a class="govuk-link govuk-link--no-visited-state" href="/emails/get-data" >Email: Monitoring and evaluation data</a></li>                
+                <li><a class="govuk-link govuk-link--no-visited-state" href="/emails/get-data" >Email: Monitoring and evaluation data</a></li>
+                <li><strong class="govuk-tag govuk-tag--green">In progress</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/find/download-file" >Your data is ready to download</a></li>
+                <li><strong class="govuk-tag govuk-tag--green">In progress</strong>  <a class="govuk-link govuk-link--no-visited-state" href="/find/download-file-expired" >Your link to download data has expired</a></li>
             </ul>              
         {% endset -%}  
 
