--- a/app/views/find/download-file.html
+++ b/app/views/find/download-file.html
@@ -3,7 +3,7 @@
 {% set showBackLink = false %}
 {% set serviceName = "Find monitoring data" %}
 
-{% set pageHeading = "Your data is ready to be downloaded" %}
+{% set pageHeading = "Your data is ready to download" %}
 {% set pageSection = "" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
