--- a/app/views/find/download-file-expired.html
+++ b/app/views/find/download-file-expired.html
@@ -16,14 +16,20 @@
 
 		
 
-		<p>Your data download expired after 7 days.</p>						
+		<p>Your data download link expired on {date}.</p>						
 		<p>You can:</p>
 		<ul class="govuk-list govuk-list--bullet">
-			<li><a href="/find/confirmation">resend the download link</a> using your previous filtered options</li>
-			<li><a href="/find/download-data">create a new monitoring and evaluation data download</a></li>
+			<li><a href="/find/confirmation">request another email with a download link</a> using your previously filtered options</li>
+			<li><a href="/find/download-data">create a new data download using new filter options</a></li>
 		</ul>
 		
 		
+
+
+
+
+
+
 		<!-- <form method="post" action="/find/confirmation" >
 
 			{{ govukButton({
