--- a/app/views/find/download-file.html
+++ b/app/views/find/download-file.html
@@ -3,7 +3,7 @@
 {% set showBackLink = false %}
 {% set serviceName = "Find monitoring data" %}
 
-{% set pageHeading = "Your data is ready to download" %}
+{% set pageHeading = "Your data is ready to be downloaded" %}
 {% set pageSection = "" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
@@ -14,14 +14,16 @@
 
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
 
-
-
-		<p>You requested </p>						
+		<div class="govuk-inset-text">
+			<p>You requested a data download on <span class="govuk-!-font-weight-bold">{date}</span>
+			<br>File format: <span class="govuk-!-font-weight-bold">{format_type}</span></p>
+		</div>
 		
 		<form method="post" action="#" >
 
 			{{ govukButton({
-				text: "Download your data"	
+				text: "Download your data",
+				classes: "govuk-!-margin-top-3"
 			}) }}
 
 		</form>		
