small change of content

--- a/app/views/find/download-file-expired.html
+++ b/app/views/find/download-file-expired.html
@@ -17,11 +17,15 @@
 		
 
 		<p>Your data download link expired on {date}.</p>						
-		<p>You can:</p>
+		<!-- <p>You can:</p>
 		<ul class="govuk-list govuk-list--bullet">
 			<li><a href="/find/confirmation">request another email with a download link</a> using your previously filtered options</li>
 			<li><a href="/find/download-data">create a new data download using new filter options</a></li>
-		</ul>
+		</ul> -->
+
+
+		<p>You can <a href="/find/download-data">create a new data download using new filter options</a></p>
+		
 		
 		
 
