--- a/app/views/find/download-file.html
+++ b/app/views/find/download-file.html
@@ -15,8 +15,8 @@
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
 
 		<div class="govuk-inset-text">
-			<p>You requested a data download on <span class="govuk-!-font-weight-bold">{date}</span>
-			<br>File format: <span class="govuk-!-font-weight-bold">{format_type}</span></p>
+			<p>You requested a data download on <span class="govuk-!-font-weight-bold">{date}</span>.
+			<br>File format: <span class="govuk-!-font-weight-bold">{format_type}, {size} KB</span></p>
 		</div>
 		
 		<form method="post" action="#" >
