changes to file content

--- a/app/views/find/download-file-expired.html
+++ b/app/views/find/download-file-expired.html
@@ -24,7 +24,7 @@
 		</ul> -->
 
 
-		<p>You can <a href="/find/download-data">create a new data download using new filter options</a></p>
+		<p>You can <a href="/find/download-data">create a new data download using new filter options</a>.</p>
 		
 		
 		
