--- a/app/views/index.html
+++ b/app/views/index.html
@@ -77,7 +77,7 @@
         
 
         <h2 class="govuk-heading-m govuk-!-margin-bottom-1">Page by page listings</h2>
-        <p class="govuk-body-s">Last updated 1 July 2024</p>
+        <p class="govuk-body-s">Last updated 2 July 2024</p>
         <p class="govuk-body govuk-!-margin-bottom-7"><span class="govuk-!-font-weight-bold">Note:</span> Some pages have dynamic content, so if using the links below and not navigating through the service flow above, it’s not always possible to show the right content for all scenarios that could occur.</p>
 
             </div>
@@ -111,7 +111,7 @@
         
         {% set reportHtml %}            
 
-            <h2 class="govuk-heading-s">Pathfinder</h2>
+            <h2 class="govuk-heading-s">Pathfinder report (TBD)</h2>
             <ul class="govuk-list govuk-list--bullet">
                 <li>
                     <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Reference data</h3>
@@ -313,9 +313,10 @@
         {{ govukTabs({
             items: [                               
             { label: "Service pages", id: "service", panel: { html: serviceHtml } },            
+            { label: "Admin", id: "admin", panel: { html: adminHtml } },             
             { label: "Reports", id: "report", panel: { html: reportHtml } },                        
             { label: "Sign off", id: "signoff", panel: { html: signoffHtml } },                        
-            { label: "Admin", id: "admin", panel: { html: adminHtml } },             
+            
             { label: "Find Monitoring", id: "findMonitoring", panel: { html: findHtml } }                    
             ]
         }) }}
