Updated content in the Progress flow

--- a/app/views/project/report/progress/completion-date.html
+++ b/app/views/project/report/progress/completion-date.html
@@ -2,7 +2,7 @@
 
 {% set showBackLink = true %}
 
-{% set pageHeading = "What’s the financial completion date?" %}
+{% set pageHeading = "What is the financial completion date?" %}
 {% set pageSection = "Programme progress" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
