--- a/app/views/project/report/progress/issues.html
+++ b/app/views/project/report/progress/issues.html
@@ -13,7 +13,12 @@
 
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
 		
-		<p>We use this information to see how we might be able to help.</p>
+		<p>We use this information to see how we might be able to help. For example, you could tell us about:</p>
+      	<ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-7">
+        	<li>content from Pathfinders TBC</li>
+        	<li>content from Pathfinders TBC</li>
+        	<li>content from Pathfinders TBC</li>
+			</ul>
 
 		<form method="post" action="/project/report/progress/milestones" >
             
