--- a/app/views/project/report/progress/milestones.html
+++ b/app/views/project/report/progress/milestones.html
@@ -2,7 +2,7 @@
 
 {% set showBackLink = true %}
 
-{% set pageHeading = "Are there any significant milestones that you’d like to tell us about?" %}
+{% set pageHeading = "Are there any significant milestones or achievements you'd like to tell us about?" %}
 {% set pageSection = "Programme progress" %}
 {% block pageTitle %}{{ macroPageTitle.pageTitle(pageHeading) }}{% endblock %}
 
@@ -13,14 +13,12 @@
 
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
 
-		<p>For example:</p>
+		<p>We use this information to find communication opportunities and share your progress. For example, we might:</p>
 		<ul class="govuk-list govuk-list--bullet">
-			<li>a case study</li>
-			<li>ministerial visit</li>
+			<li>share your successes with others</li>
+			<li>write a case study</li>
+			<li>organise a ministerial visit</li>
 		</ul>
-			
-
-		<p>We use this information to highlight your successes to others.</p>
 
 		<form method="post" action="#" >
             
