--- a/app/views/project/report/progress/delivery.html
+++ b/app/views/project/report/progress/delivery.html
@@ -12,6 +12,13 @@
 	<div class="govuk-grid-column-two-thirds">
 
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
+
+		<p>Give details about:</p>
+      	<ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-7">
+        	<li>content from Pathfinders TBC</li>
+        	<li>content from Pathfinders TBC</li>
+        	<li>content from Pathfinders TBC</li>
+      	</ul>
 			
 
 		<form method="post" action="/project/report/progress/issues" >
