--- a/app/views/index.html
+++ b/app/views/index.html
@@ -137,12 +137,12 @@
 
                     <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Programme progress</h3>
                     <ul class="govuk-list govuk-list--bullet">                        
-                        <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/progress/completion-date" >What’s the financial completion date?</a></li>                
-                        <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/progress/practical-completion-date" >What’s the practical completion date?</a></li>
-                        <!-- <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/progress/activity-completion-date" >What’s the activity completion date?</a></li> -->
+                        <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/progress/completion-date" >What is the financial completion date?</a></li>                
+                        <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/progress/practical-completion-date" >What is the practical completion date?</a></li>
+                        <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/progress/activity-completion-date" >What is the activity completion date?</a></li>
                         <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/progress/delivery" >How is the delivery of your projects progressing?</a></li>
                         <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/progress/issues" >Are there any issues affecting the delivery of your projects?</a></li>
-                        <li> <strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/progress/milestones" >Are there any significant milestones that you’d like to tell us about?</a></li>
+                        <li> <strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/progress/milestones" >Are there any significant milestones or achievements you’d like to tell us about?</a></li>
                     </ul>
 
 
