--- a/app/views/project/report/progress/issues.html
+++ b/app/views/project/report/progress/issues.html
@@ -22,9 +22,10 @@
 
 		<form method="post" action="/project/report/progress/milestones" >
             
-			{{ govukTextarea({
+			{{ govukCharacterCount({
 				name: "projectIssueMeasures",
 				id: "projectIssueMeasures",
+				maxwords: 500,
 				label: {
 				  text: "Can you provide more detail?",
 				  classes: "govuk-label govuk-visually-hidden",
