--- a/app/views/index.html
+++ b/app/views/index.html
@@ -77,7 +77,7 @@
         
 
         <h2 class="govuk-heading-m govuk-!-margin-bottom-1">Page by page listings</h2>
-        <p class="govuk-body-s">Last updated 2 July 2024</p>
+        <p class="govuk-body-s">Last updated 3 July 2024</p>
         <p class="govuk-body govuk-!-margin-bottom-7"><span class="govuk-!-font-weight-bold">Note:</span> Some pages have dynamic content, so if using the links below and not navigating through the service flow above, it’s not always possible to show the right content for all scenarios that could occur.</p>
 
             </div>
@@ -137,12 +137,12 @@
 
                     <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Programme progress</h3>
                     <ul class="govuk-list govuk-list--bullet">                        
-                        <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/progress/completion-date" >What is the financial completion date?</a></li>                
-                        <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/progress/practical-completion-date" >What is the practical completion date?</a></li>
-                        <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/progress/activity-completion-date" >What is the activity completion date?</a></li>
-                        <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/progress/delivery" >How is the delivery of your projects progressing?</a></li>
-                        <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/progress/issues" >Are there any issues affecting the delivery of your projects?</a></li>
-                        <li> <strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/progress/milestones" >Are there any significant milestones or achievements you’d like to tell us about?</a></li>
+                        <li><strong class="govuk-tag govuk-tag--blue">New</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/progress/completion-date" >What is the financial completion date?</a></li>                
+                        <li><strong class="govuk-tag govuk-tag--blue">New</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/progress/activity-completion-date" >What is the activity completion date?</a></li>
+                        <li><strong class="govuk-tag govuk-tag--blue">New</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/progress/practical-completion-date" >What is the practical completion date?</a></li>                        
+                        <li><strong class="govuk-tag govuk-tag--blue">New</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/progress/delivery" >How is the delivery of your projects progressing?</a></li>
+                        <li><strong class="govuk-tag govuk-tag--blue">New</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/progress/issues" >Are there any issues affecting the delivery of your projects?</a></li>
+                        <li> <strong class="govuk-tag govuk-tag--blue">New</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/progress/milestones" >Are there any significant milestones or achievements you’d like to tell us about?</a></li>
                     </ul>
 
 
