--- a/app/views/project/report/rag/index.html
+++ b/app/views/project/report/rag/index.html
@@ -13,7 +13,9 @@
 
     	{{ macroPageHeader.pageHeader(pageHeading,pageSection) }}      
 		
-        <p class="govuk-body">Introduction text for this section including <a href="#">link to defining the ratings</a>.</p>
+        <p class="govuk-body">You need to report on the spend risk and delivery risk for each project using RAG ratings. </p>
+            
+        <p class="govuk-body">Use the <a href="#">RAG rating definitions (opens in a new window)</a> to help you complete the ratings as accurately as possible. </p>
 
     </div>
     <div class="govuk-grid-column-full">
