--- a/app/views/find/download-data.html
+++ b/app/views/find/download-data.html
@@ -29,6 +29,7 @@
 			</ul>
 		</div>
 
+		<form method="post">
 		{{ govukRadios({			
 			name: "dataFormat",
 			fieldset: {
@@ -44,7 +45,7 @@
 			]
 		}) }}				
 		
-		<form method="post" action="/find/confirmation" >
+		<input type="hidden" id="emailAddress" name="emailAddress" value="brian.coult@levellingup.gov.uk" />
 
 			{{ govukButton({
 				text: "Confirm and request data "
@@ -54,7 +55,7 @@
 
 		<p class="govuk-!-font-size-19"><a class="govuk-link govuk-link--no-visited-state" href="">Access the funding glossary</a></p>
 			
-
+ 
   	</div>	  
 </div>
 
