Added content to RAG examples page

--- a/app/views/project/report/rag/index.html
+++ b/app/views/project/report/rag/index.html
@@ -15,7 +15,8 @@
 		
         <p class="govuk-body">You need to report on the spend risk and delivery risk for each project using RAG ratings. </p>
             
-        <p class="govuk-body">Use the <a href="#">RAG rating definitions (opens in a new window)</a> to help you complete the ratings as accurately as possible. </p>
+        <p class="govuk-body">Use the <a href="#">RAG rating examples (opens in a new window)</a> to help you complete the ratings as accurately as possible. </p>
+        <br>
 
     </div>
     <div class="govuk-grid-column-full">
