--- a/app/views/index.html
+++ b/app/views/index.html
@@ -155,10 +155,11 @@
 
                     <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Project RAG ratings</h3>
                     <ul class="govuk-list govuk-list--bullet">                        
-                        <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/rag/" >Project RAG ratings</a></li>
-                        <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/rag/spend" >What is the spend RAG rating for this project?</a></li>
-                        <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/rag/delivery" >What is the delivery RAG rating for this project?</a></li>
-                        <li><strong class="govuk-tag govuk-tag--green">In progress</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/rag/information" >Is there anything you need to tell us about your ratings?</a></li>
+                        <li><strong class="govuk-tag govuk-tag--blue">New</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/rag/" >Project RAG ratings</a></li>
+                        <li><strong class="govuk-tag govuk-tag--blue">New</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/rag/rag-examples" >RAG rating examples</a></li>
+                        <li><strong class="govuk-tag govuk-tag--blue">New</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/rag/spend" >What is the spend RAG rating for this project?</a></li>
+                        <li><strong class="govuk-tag govuk-tag--blue">New</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/rag/delivery" >What is the delivery RAG rating for this project?</a></li>
+                        <li><strong class="govuk-tag govuk-tag--blue">New</strong> <a class="govuk-link govuk-link--no-visited-state" href="/project/report/rag/information" >Is there anything you need to tell us about your ratings?</a></li>
                     </ul>
 
                     <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Risks</h3>
